2009-07-01  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dimitri Glazkov.
        
        Add some missing pixel results for compositing tests.

        * platform/mac/compositing/layers-inside-overflow-scroll-expected.checksum: Added.
        * platform/mac/compositing/layers-inside-overflow-scroll-expected.png: Added.
        * platform/mac/compositing/overflow/overflow-scroll-expected.checksum: Added.
        * platform/mac/compositing/overflow/overflow-scroll-expected.png: Added.

2009-07-01  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by George Staikos.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=26884

        WMLTestCase.js relies on timing-dependant hacks, making it difficult to predict results on slower machines.
        Fix by rewriting and simplifying the testing procedure, which contained unnecessary quirks working around older WML bugs.

        * wml/resources/WMLTestCase.js:
        (createWMLTestCase.iframeElement.onload):
        (createWMLTestCase):
        (startTest):

2009-07-01  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by Holger Freyther.

        Apply same cleanup to WML testcases living in http/tests/wml/. Forgot about them in my last commit.

        * http/tests/wml/resources/go-task-get-method-accept-charset.js:
        (setupTestDocument):
        * http/tests/wml/resources/go-task-get-method.js:
        (setupTestDocument):
        * http/tests/wml/resources/go-task-post-method-accept-charset.js:
        (setupTestDocument):
        * http/tests/wml/resources/go-task-post-method.js:
        (setupTestDocument):
        * http/tests/wml/resources/post-data-to-server.js:
        (setupTestDocument):

2009-07-01  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by Holger Freyther.

        Slightly cleanup some WML testcases: