@@ -1,5 +1,17 @@
 2009-07-01  David Hyatt  <hyatt@apple.com>
 
+        Reviewed by Simon Fraser.
+
+        Make sure setting attributes on dcol elements properly updates the corresponding DataGridColumn object.
+
+        Added new test in fast/dom/HTMLDataGridElement.
+
+        * html/HTMLDataGridColElement.cpp:
+        (WebCore::HTMLDataGridColElement::parseMappedAttribute):
+        * html/HTMLDataGridColElement.h:
+
+2009-07-01  David Hyatt  <hyatt@apple.com>
+
         Reviewed by Tim Hatcher.
 
         <rdar://problem/6998524> REGRESSION (r44474): Form text field has focus ring, looks focused,
